UI fix for overlapping buttons in mobile

--- a/styles/play.css
+++ b/styles/play.css
@@ -174,5 +174,8 @@ main {
     #maintitle {
         display: none;
     }
-    
+    #field {
+        margin-top: 20px;
+        height: calc(100vh - 80px);
+    }
 }
